@@ -274,6 +274,7 @@ wxMSW:
 - Fix discrepancy between GDI and Direct2D in high DPI (Kumazuma, #23486).
 - Fix wxTreeCtrl::ScrollTo() with hidden root item (#23534).
 - Fix hang in wxFileDialog if COINIT_MULTITHREADED was used (#23578).
+- Fix handling of RLE-compressed bitmaps (Brian Nixon, #23573).
 
 wxOSX:
 
